--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: My Memoirs, Vol. I, 1802 to 1821
 url: http://www.gutenberg.org/ebooks/49678
